# glare-core

./: LICENCE  README.md  glare-core.natvis
ImGui/: glare notes.txt  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
Imath/: notest.txt
OpenEXR/: notest.txt  openexr.cmake
ai/: LLMClient.cpp  LLMClient.h  LLMThread.cpp  LLMThread.h
attic/: HashMapInsertOnly2.cpp  HashMapInsertOnly2Iterators.h
basis_universal/: glarenotes.txt
direct3d/: Direct3DUtils.cpp  Direct3DUtils.h
dll/: IndigoAllocation.cpp  IndigoMesh.cpp  IndigoStringUtils.cpp  IndigoStringUtils.h
double-conversion/: bignum.cc  double-conversion version.txt  strtod.cc  utils.h
freetype/: glarenotes.txt
graphics/: AnimationData.cpp  AnimationData.h  BasisDecoder.cpp  BasisDecoder.h  BatchedMesh.cpp  BatchedMesh.h  BatchedMeshTests.cpp  BatchedMeshTests.h  BoxFilterFunction.cpp  BoxFilterFunction.h  Colour3.cpp  Colour3f.cpp  Colour4f.cpp  Colour4f.h  CompressedImage.cpp  CompressedImage.h  DXTCompression.cpp  DXTCompression.h  DXTImageMap.cpp  DXTImageMap.h  DXTImageMapTests.cpp  DXTImageMapTests.h  Drawing.cpp  Drawing.h  EXRDecoder.cpp  EXRDecoder.h  FBM2DMap.cpp  FBM2DMap.h  FFTPlan.cpp  FFTPlan.h  FPImageMap16.cpp  FPImageMap16.h  FPImageMap32.cpp  FPImageMap32.h  FilterFunction.cpp  FilterFunction.h  FloatDecoder.cpp  FloatDecoder.h  FormatDecoderGLTF.cpp  FormatDecoderGLTF.h  (+128 more)
indigo/: DiscreteDistribution.cpp  DiscreteDistribution.h  DisplacementUtils.cpp  DisplacementUtils.h  PrintOutput.cpp  PrintOutput.h  SampleTypes.h  StandardPrintOutput.cpp  StandardPrintOutput.h  TestUtils.cpp  TestUtils.h  TextureServer.cpp  TextureServer.h  ThreadContext.cpp  ThreadContext.h  UVCoordEvaluator.cpp  UVCoordEvaluator.h  UVUnwrapper.cpp  UVUnwrapper.h  globals.h
libpng/: notes.txt  pnglibconf.h  pngtest.c
libpng-1.6.37/: notes.txt
libs/: CMakeLists.txt
libs/makeclass/: makeclass.rb
libs/stb/: stb_dxt.h
lua/: LuaScript.cpp  LuaScript.h  LuaSerialisation.cpp  LuaSerialisation.h  LuaTests.cpp  LuaTests.h  LuaUtils.cpp  LuaUtils.h  LuaVM.cpp  LuaVM.h
maths/: ChebyshevApprox.cpp  ChebyshevApprox.h  CheckedMaths.cpp  CheckedMaths.h  Complex.cpp  Complex.h  DouglasPeuckerAlg.cpp  DouglasPeuckerAlg.h  GeometrySampling.cpp  GeometrySampling.h  Hilbert.cpp  IntervalSet.cpp  IntervalSet.h  LineSegment4f.h  MVector.cpp  MVector.h  Matrix2.cpp  Matrix2.h  Matrix4.cpp  Matrix4.h  Matrix4f.cpp  Matrix4f.h  NVec.cpp  NVec.h  PCG32.h  PaddedVec3.cpp  PaddedVec3.h  Quat.cpp  Quat.h  RNGTest.cpp  RNGTest.h  Rect2.cpp  Rect2.h  Rectangle dlf.cpp  Rectangle dlf.h  Rectangle.cpp  Rectangle.h  RunningVariance.cpp  RunningVariance.h  SSE.cpp  (+37 more)
meshoptimizer/: glarenotes.txt
networking/: EmscriptenWebSocket.cpp  EmscriptenWebSocket.h  FractionListener.h  HTTPClient.cpp  HTTPClient.h  IPAddress.cpp  IPAddress.h  MySocket.cpp  MySocket.h  Networking.cpp  Networking.h  NetworkingTests.cpp  NetworkingTests.h  Packet.cpp  Packet.h  Port.cpp  Port.h  RecordingSocket.cpp  RecordingSocket.h  SMTPClient.cpp  SMTPClient.h  SocketInterface.cpp  SocketInterface.h  SocketTests.cpp  SocketTests.h  TLSSocket.cpp  TLSSocket.h  TLSSocketTests.cpp  TLSSocketTests.h  TestSocket.cpp  TestSocket.h  UDPSocket.cpp  UDPSocket.h  URL.cpp  URL.h  WebSocket.cpp  WebSocket.h  WebSocketTests.cpp  WebSocketTests.h  clientserverstreamsys.cpp  (+94 more)
opencl/: OpenCL.cpp  OpenCL.h  OpenCLBuffer.cpp  OpenCLBuffer.h  OpenCLCommandQueue.cpp  OpenCLCommandQueue.h  OpenCLContext.cpp  OpenCLContext.h  OpenCLDevice.cpp  OpenCLDevice.h  OpenCLImage.cpp  OpenCLImage.h  OpenCLKernel.cpp  OpenCLKernel.h  OpenCLPathTracerTests.cpp  OpenCLPathTracerTests.h  OpenCLPlatform.cpp  OpenCLPlatform.h  OpenCLProgram.cpp  OpenCLProgram.h  OpenCLProgramCache.cpp  OpenCLProgramCache.h  OpenCLTests.cpp  OpenCLTests.h  ProgramCache.cpp  ProgramCache.h  opencl_test_code.txt
opengl/: AsyncGeometryUploader.cpp  AsyncGeometryUploader.h  AsyncTextureLoader.cpp  AsyncTextureLoader.h  BasicOpenGLTypes.h  BufferedTimeElapsedQuery.cpp  BufferedTimeElapsedQuery.h  DrawIndirectBuffer.cpp  DrawIndirectBuffer.h  EnvMapProcessing.cpp  EnvMapProcessing.h  FrameBuffer.cpp  FrameBuffer.h  GLMemUsage.h  GLMeshBuilding.cpp  GLMeshBuilding.h  IncludeOpenGL.h  MeshPrimitiveBuilding.cpp  MeshPrimitiveBuilding.h  OpenGLCircularBuffer.cpp  OpenGLCircularBuffer.h  OpenGLEngine.cpp  OpenGLEngine.h  OpenGLEngineTests.cpp  OpenGLEngineTests.h  OpenGLExtensions.cpp  OpenGLExtensions.h  OpenGLMemoryObject.cpp  OpenGLMemoryObject.h  OpenGLMeshRenderData.cpp  OpenGLMeshRenderData.h  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTextureKey.h  OpenGLUploadThread.cpp  OpenGLUploadThread.h  (+47 more)
opengl/testbed/: CMakeLists.txt  testbed.cpp
patches/: using single VBO and PBO for async uploads.diff
physics/: 3dsmesh.h  BVH.cpp  BVH.h  BVHBuilder.cpp  BVHBuilder.h  BVHBuilderTestUtils.cpp  BVHBuilderTestUtils.h  BVHBuilderTests.cpp  BVHBuilderTests.h  BVHImpl.cpp  BVHImpl.h  BVHNode.cpp  BVHNode.h  BVHObjectTree.cpp  BVHObjectTree.h  BVHObjectTreeTests.cpp  BVHObjectTreeTests.h  BVH_Notes.txt  BinningBVHBuilder.cpp  BinningBVHBuilder.h  Copy (2) of jscol_treenode.cpp  Copy (2) of jscol_treenode.h  Copy (2) of jscol_tritree.cpp  Copy (2) of jscol_tritree.h  Copy of jscol_aabbox.cpp  Copy of jscol_treenode.cpp  Copy of jscol_treenode.h  Copy of jscol_tritree.cpp  Copy of jscol_tritree.h  EmbreeBVHBuilder.cpp  EmbreeBVHBuilder.h  FastKDTreeBuilder.cpp  FastKDTreeBuilder.h  HashedGrid.cpp  HashedGrid.h  HashedGrid2.h  HashedGridTests.cpp  HashedGridTests.h  KDTree.cpp  KDTree.h  (+136 more)
pugixml/: glarenotes.txt
qt/: QtUtils.cpp  QtUtils.h
raytracing/: DirectionalLight.cpp  DirectionalLight.h  RayBundle.cpp  RayBundle.h  draw_fresnel_graph.txt  hitinfo.cpp  hitinfo.h  matutils.cpp  matutils.h
scripts/: build_jpegturbo.rb  build_libressl.rb  build_llvm.rb  cmake.rb  script_utils.rb
settings/: EmscriptenSettingsStore.cpp  EmscriptenSettingsStore.h  QSettingsStore.h  RegistrySettingsStore.cpp  (+4 more)
(+1545 files in other folders)
